# backstage-kitchen-sink

./: .bazelrc  .prettierignore  BUILD  CHANGELOG.md  MODULE.bazel  README.md  catalog-info.yaml  go.mod  pyproject.toml  template.yaml
.github/workflows/: weekly_tag.yaml
docs/dependency-versioning/: cpp.md  ruby.md
hello/cpp/: hello.h  hello_test.cc
hello/java/: Hello.java  HelloTest.java
hello/js/: greet.test.ts  greet.ts
hello/py/: greet.py  hello.py
hello/ruby/: hello.rb
hello/rust/: main.rs
infrastructure/pulumi/repo_config/: Pulumi.yaml  README.md  main.go
requirements/: all.txt
skeleton/: .bazelrc  .clippy.toml  .gitattributes  .gitignore  .rubocop.yml  BUILD.bazel  Cargo.toml  Gemfile  MODULE.bazel  README.md  REPO.bazel  catalog-info.yaml  eslint.config.mjs  mkdocs.yml  package.json  pmd.xml  prettier.config.cjs  pyproject.toml
skeleton/.devcontainer/: Dockerfile  kind-config.yaml
skeleton/.github/workflows/: ci.yaml
skeleton/bazel/: workspace_status.sh
skeleton/bazel/oci/: go_image.bzl  py3_image.bzl
skeleton/docs/dependency-versioning/: go.md  index.md  javascript.md  python.md  rust.md
skeleton/hello/cpp/: hello.cc  main.cc
skeleton/hello/go/: hello.go  hello_test.go
skeleton/hello/js/: hello.ts
skeleton/hello/py/: hello_test.py
skeleton/hello/ruby/: hello_test.rb
skeleton/hello/shell/: hello.sh  hello_test.sh
skeleton/infrastructure/pulumi/repo_config/: Pulumi.yaml  README.md  go.mod  main.go
skeleton/tools/: BUILD
skeleton/tools/pulumi/: pulumi_setup.sh
skeleton/tools/pytest/: defs.bzl
tools/lint/: linters.bzl
tools/pulumi/: create_app.sh  pulumi_cmd.sh
tools/scripts/: BUILD.bazel
