# Copyright 2026 MyProject
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "my_project"
classifiers = ["Private :: Do Not Upload"]
version = "0"
# Matches the hermetic interpreter registered in MODULE.bazel (python_interpreters).
requires-python = ">=3.12"

# Runtime dependencies. Pinned transitively by uv into uv.lock — avoid version
# matching clauses (`==`) here; only constrain when a range is incompatible.
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-matching
dependencies = [
]

# Dependency groups map to uv "venvs" (see aspect_rules_py//uv). The `default`
# group is selected by `.bazelrc`'s `--@pypi//venv=default` and carries the dev
# and test tooling. setuptools + build are required by uv for sdist builds.
[dependency-groups]
default = [
    "build",
    "pytest",
    "setuptools",
]

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]

# See https://docs.astral.sh/ty/reference/configuration/
[tool.ty.rules]

# See https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
# The hello/py sample imports its modules via the full repo-root package path
# (e.g. `hello.py.greet`). Namespace-package handling lets pytest collect those
# modules without an __init__.py in every directory.
consider_namespace_packages = true
